# noose

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  VERSIONS  conanfile.txt
cmake/: nooseidl_generate_cpp.cmake
components/: CMakeLists.txt
components/logging/: CMakeLists.txt
components/rcl/: CMakeLists.txt
components/rcl/src/: CMakeLists.txt
components/rcl/src/rcl/: CMakeLists.txt
components/rcl/src/rcl_action/: CMakeLists.txt
components/rcl/src/rcl_lifecycle/: CMakeLists.txt
components/rcl/src/rcl_yaml_param_parser/: CMakeLists.txt
components/rclcpp/: CMakeLists.txt
components/rclcpp/include/rclcpp/node_interfaces/: get_node_type_descriptions_interface.hpp  node_type_descriptions_interface_traits.hpp
components/rclcpp/src/: CMakeLists.txt
components/rclcpp/src/ament_index_cpp/: CMakeLists.txt
components/rclcpp/src/class_loader/: CMakeLists.txt
components/rclcpp/src/libstatistics_collector/: CMakeLists.txt
components/rclcpp/src/rclcpp/: CMakeLists.txt
components/rclcpp/src/rclcpp_action/: CMakeLists.txt
components/rclcpp/src/rclcpp_components/: CMakeLists.txt  component_manager.cpp
components/rclcpp/src/rclcpp_lifecycle/: CMakeLists.txt
components/rcutils/: CMakeLists.txt
components/rmw/: CMakeLists.txt
components/rmw/src/: CMakeLists.txt
components/rmw/src/rmw/: CMakeLists.txt
components/rmw/src/rmw_dds_common/: CMakeLists.txt
components/rmw/src/rmw_fastrtps_cpp/: CMakeLists.txt
components/rmw/src/rmw_fastrtps_shared_cpp/: CMakeLists.txt
components/rosidl_runtime/: CMakeLists.txt
components/rosidl_runtime/src/: CMakeLists.txt
components/rosidl_runtime/src/rosidl_dynamic_typesupport/: CMakeLists.txt
components/rosidl_runtime/src/rosidl_dynamic_typesupport_fastrtps/: CMakeLists.txt
components/rosidl_runtime/src/rosidl_runtime_c/: CMakeLists.txt
components/rosidl_runtime/src/rosidl_typesupport_c/: CMakeLists.txt  type_support_dispatch.hpp
components/rosidl_runtime/src/rosidl_typesupport_cpp/: CMakeLists.txt  type_support_dispatch.hpp
components/rosidl_runtime/src/rosidl_typesupport_fastrtps_c/: CMakeLists.txt
components/rosidl_runtime/src/rosidl_typesupport_fastrtps_cpp/: CMakeLists.txt
components/rosidl_runtime/src/rosidl_typesupport_introspection_c/: CMakeLists.txt
components/rosidl_runtime/src/rosidl_typesupport_introspection_cpp/: CMakeLists.txt
examples/: CMakeLists.txt
interfaces/: CMakeLists.txt
interfaces/action_msgs/: CMakeLists.txt
interfaces/builtin_interfaces/: CMakeLists.txt
interfaces/composition_interfaces/: CMakeLists.txt
interfaces/lifecycle_msgs/: CMakeLists.txt
interfaces/lifecycle_msgs/msg/: CMakeLists.txt
interfaces/rcl_interfaces/: CMakeLists.txt
interfaces/rosgraph_msgs/: CMakeLists.txt
interfaces/service_msgs/: CMakeLists.txt
interfaces/statistics_msgs/: CMakeLists.txt
interfaces/std_msgs/: CMakeLists.txt
interfaces/type_description_interfaces/: CMakeLists.txt
interfaces/unique_identifier_msgs/: CMakeLists.txt
(+14 files in other folders)
