add_subdirectory(rosidl_dynamic_typesupport)
add_subdirectory(rosidl_dynamic_typesupport_fastrtps)
add_subdirectory(rosidl_runtime_c)
add_subdirectory(rosidl_typesupport_c)
add_subdirectory(rosidl_typesupport_cpp)
add_subdirectory(rosidl_typesupport_introspection_cpp)
add_subdirectory(rosidl_typesupport_fastrtps_cpp)
add_subdirectory(rosidl_typesupport_fastrtps_c)
add_subdirectory(rosidl_typesupport_introspection_c)